Delete babel and start create on vanilla nodejs
