# src/api/swagger.v1.json
@@ -158,7 +158,7 @@
 					{ "oauth2": [] }
 				]
 			},
-			"put": {
+			"patch": {
 				"tags": ["Groups"],
 				"requestBody": {
 					"required": true,
@@ -381,11 +381,73 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Teacher"
+									"$ref": "#/components/schemas/TeacherById"
 								}
 							}
 						}
 					}
+				},
+				"security": [
+					{ "oauth2": [] }
+				]
+			},
+			"patch": {
+				"tags": ["Teachers"],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateTeacher"
+							}
+						}
+					}
+				},
+				"parameters": [
+					{
+						"name": "teacherId",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string"
+						},
+						"style": "simple"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "default",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/UpdateTeacher"
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{ "oauth2": [] }
+				]
+			},
+			"delete": {
+				"tags": ["Teachers"],
+				"parameters": [
+					{
+						"name": "teacherId",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string"
+						},
+						"style": "simple"
+					}
+				],
+				"responses": {
+					"200": { "description": "default" }
 				},
 				"security": [
 					{ "oauth2": [] }
@@ -615,6 +677,44 @@
 					"_id": {
 						"type": "string"
 					},
+					"name": {
+						"type": "object",
+						"properties": {
+							"firstName": {
+								"type": "string"
+							},
+							"lastName": {
+								"type": "string"
+							},
+							"middleName": {
+								"type": "string"
+							}
+						}
+					},
+					"departamentId": {
+						"type": "string"
+					},
+					"degreeId": {
+						"type": "string"
+					},
+					"academicId": {
+						"type": "string"
+					},
+					"isActive": {
+						"type": "boolean",
+						"default": "true"
+					},
+					"email": {
+						"type": "string"
+					},
+					"site": {
+						"type": "string"
+					}
+				}
+			},
+			"TeacherById": {
+				"type": "object",
+				"properties": {
 					"name": {
 						"type": "object",
 						"properties": {
